--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@ console.log(num1 / num2);
 
 </script>
 <h1>we are the best</h1>
-<p>This is a paragraph.</p>
+<p>abhi you are a big banana</p>
+<p>ravi you are a big stick</p>
+<p>kelvin you are garbo</p>
+
 <h2>we are the best part 2</h2>
 </body>
 </html>
